Foundations for dual value generation